rider passenger connection logic, server error fix,
